# perspecta

./: .coderabbit.yaml  .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  build.rs  dist-workspace.toml  dist.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
scripts/: register-protocol-linux.sh
src/: app.rs  benchmark_support.rs  dicom.rs  dicomweb.rs  launch.rs  logging.rs  main.rs  mammo.rs  renderer.rs
src/app/: history.rs  load.rs  measurement.rs  metadata.rs  overlay.rs
src/dicom/: gsps.rs  parametric_map.rs  sr.rs
tools/benchmark/: Cargo.toml
tools/benchmark/src/: benchmark_support.rs  lib.rs
website/: .gitignore  hugo.toml
website/content/: _index.md  open-source-dicom-viewer.md  privacy.md
website/content/docs/: _index.md  dicomweb.md  launch-options.md  viewer-basics.md
website/content/docs/install/: _index.md  linux.md  macos.md  windows.md
website/data/: install_platforms.toml
website/layouts/: index.html
website/layouts/_default/: baseof.html  single.html
website/layouts/docs/: list.html  single.html
website/layouts/partials/: docs-sidebar.html  download-button.html  footer.html  header.html
website/layouts/shortcodes/: install-platform.html
website/static/css/: styles.css
website/static/js/: consent.js  download-platform.js
