[workspace]
members = ["tools/benchmark"]
resolver = "2"

[package]
name = "perspecta"
version = "0.3.0"
edition = "2021"
rust-version = "1.73"
repository = "https://github.com/timcogan/perspecta"
autobins = false
default-run = "perspecta"

[dependencies]
anyhow = "1.0"
dicom-object = "0.7"
dicom-pixeldata = { version = "0.7", features = ["openjp2"] }
eframe = "0.30"
egui = "0.30"
log = "0.4"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
dicom-core = "0.7"

[[bin]]
name = "perspecta"
path = "src/main.rs"

[profile.dist]
inherits = "release"
