[workspace]
members = ["tools/benchmark"]
resolver = "2"

[package]
name = "perspecta"
version = "0.4.0"
edition = "2021"
rust-version = "1.73"
repository = "https://github.com/timcogan/perspecta"
autobins = false
default-run = "perspecta"

[features]
default = ["jpeg2000"]
jpeg_ls = ["dicom-pixeldata/charls"]
jpeg2000 = ["dicom-pixeldata/openjp2"]

[dependencies]
anyhow = "1.0"
dicom-core = "0.8.2"
dicom-object = "0.8.2"
dicom-pixeldata = "0.8.2"
eframe = "0.30"
egui = "0.30"
log = "0.4"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
dicom-encoding = "0.8.2"
dicom-transfer-syntax-registry = "0.8.2"

[[bin]]
name = "perspecta"
path = "src/main.rs"

[profile.dist]
inherits = "release"
