[package]
name = "benchmark-tools"
version = "0.3.0"
edition = "2021"
rust-version = "1.73"
publish = false
autobins = false

[dependencies]
anyhow = "1.0"
dicom-core = "0.9.1"
dicom-object = "0.9.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "benchmark_full_single_open"
path = "src/bin/benchmark_full_single_open.rs"

[[bin]]
name = "measure_single_open"
path = "src/bin/measure_single_open.rs"
