[package]
name = "benchmark-tools"
version = "0.3.0"
edition = "2021"
rust-version = "1.73"
publish = false
autobins = false

[dependencies]
anyhow = "1.0"
dicom-core = "0.10.0"
dicom-object = "0.10.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "benchmark_open"
path = "src/bin/benchmark_open.rs"
